24/12/2001      Version 2.1.0  Jemboss. More reports, alignments.
29/07/2001      Version 2.0.1  Release of HMMER as embassy pkg. DBIGCG bugfix
15/07/2001      Version 2.0.0  New feature table handling etc
25/05/2001      Version 1.13.1 Fix emboss.default.template problem
24/05/2001      Version 1.13.0 SHOWALIGN and EMBOSSVERSION added. Prophet fixed
17/04/2001      Version 1.12.0 DISTMAT and CAI added
10/03/2001      Version 1.11.0 CHARGE and DEGAPSEQ added.
26/02/2001      Version 1.10.1 Bug fixes of marscan, getorf and garnier
18/02/2001      Version 1.10.0 SCOPE, NRSCOPE, DOMAINER added.
                               Initial large file model support.
22/01/2001      Version 1.9.0 ABIVIEW RECODE added. Linked list and
                              string iterator code rewritten.
20/11/2000      Version 1.8.0 CODERET added. Corba test routines
31/10/2000      Version 1.7.0 ENTRET added. GCG osf style changed.
                              Fixed -slower & -supper for multiple
                              sequences
25/10/2000      Version 1.6.3 Further mods for seqed files.
                              Rewrite of profile core routines.
                              Added %id, %sim and fasta output to
                              NEEDLE and WATER
23/10/2000	Version 1.6.2 Now reads GCG seqed mangled files. Phylip
                              output fixed. Numerous minor changes.
11/10/2000      Version 1.6.1 RedHat Linux 7.0 fpos_t fix
06/10/2000      Version 1.6.0 Addition of CONS application
03/10/2000      Version 1.5.6 URL access handles new SRS6.07* format.
                              Library and applications leak-free.
                              Error messages made less daunting.
28/09/2000      Version 1.5.5 dbigcg changes for genbank. Memory leaks plugged.
23/09/2000      Version 1.5.4 Added blast multi-volume support. More gui.
18/09/2000      Version 1.5.3 LinuxPPC support added
15/09/2000      Version 1.5.2 dbigcg changes for embl