@@ -6,7 +6,7 @@ dnl Process this file with autoconf to produce a configure script.
 #CC=cc
 
 AC_INIT(ajax/ajacd.c)
-AM_INIT_AUTOMAKE(EMBOSS, 2.1.0)
+AM_INIT_AUTOMAKE(EMBOSS, 2.2.0)
 
 
 dnl Use libtool to make a shared library.
