@@ -1,3 +1,4 @@
+07/01/2001      Version 2.2.0  Biosed, configure tidy
 24/12/2001      Version 2.1.0  Jemboss. More reports, alignments.
 29/07/2001      Version 2.0.1  Release of HMMER as embassy pkg. DBIGCG bugfix
 15/07/2001      Version 2.0.0  New feature table handling etc
